<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PulseBuddy</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="zero_pulse">0</string>
    <string name="maps">Activity Mode</string>
    <string name="maptype">Ändere Kartenart</string>
    <string name="graph_day">Zeige Tagesanzeige</string>
    <string name="reset">Reset</string>
    <string name="common_saved_values">Gespeichert!</string>

    <!-- BLE -->
    <string name="ble_title_devices">PulseBuddy Device Scan</string>
    <string name="ble_list_empty">No devices found yet</string>
    <string name="ble_scanning">Scanning</string>
    <string name="ble_scanagain">Scan Again</string>
    <string name="ble_disconnectall">Reset</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="help">Hilfe</string>
    <string name="settings">Einstellungen</string>
    <string name="calculation">Calculation Mode</string>
    <string name="calibration">Kalibrierung</string>
    <string name="calorieCalculator">Kalorienrechner</string>
    <string name="home">Startseite</string>
    <string name="sm">Sport Mode</string>
    <string name="dm">Day Mode</string>

    <!-- BMI -->
    <string name="bmiSUnder">Starkes Untergewicht</string>
    <string name="bmiUnder">Untergewicht</string>
    <string name="bmiNormal">Normalgewicht</string>
    <string name="bmiOver">Übergewicht</string>
    <string name="bmiSOver">Adipositas</string>
    <string name="bmiObese">Starkes Adipositas</string>
    <string name="bmi_label_value">Body-Mass-Index:</string>
    <string name="bmi_textView_value">0</string>
    <string name="bmi_label_recommendation">Bewertung:</string>
    <string name="bmi_textView_recommendation">Normal</string>

    <!-- Calibration -->
    <string name="calibration_titel">Kalibrierung</string>
    <string name="calibration_date_of_birth">Geburtsdatum:</string>
    <string name="calibration_user_weight">Gewicht:</string>
    <string name="calibration_user_height">Größe:</string>
    <string name="calibration_user_gender">Geschlecht:</string>
    <string name="calibration_save_values">Speichern</string>
    <string name="calibration_kilogram">kg</string>
    <string name="calibration_cm">cm</string>
    <string name="calibration_edit">Bearbeiten</string>
    <string name="calibration_kind_of_sport_label">Trainingsart wählen: </string>

    <!-- BMR -->
    <string name="textViewBMREResult">0</string>
    <string name="textViewBMRResult">0</string>
    <string name="labelBMR">Grundumsatz:</string>
    <string name="labelBMRE">Grundumsatzenergie:</string>
    <string name="buttonfinished">Fertig</string>

    <!-- Day-Mode -->
    <string name="dayMode_startDate">Startdatum</string>
    <string name="dayMode_to">bis</string>
    <string name="dayMode_endDate">Enddatum</string>

    <!-- Sport Mode -->
    <string name="sport_mode_title_workout_plan">Trainingsplan</string>
    <string name="sport_mode_title_sport_test_overview">Sport Test Überblick</string>
    <string name="sport_mode_title_sport_test">Sport Test</string>
    <string name="sport_test_title_perform">Durchführen</string>
    <string name="sport_test_title_result">Historie</string>
    <string name="sport_mode_title_activity_sport_test_fragment">Sport Test</string>
    <string name="sport_mode_note">Hinweis</string>
    <string name="sport_mode_note_description">Bitte folge den Anweisungen um Dein persönliches Sportprofil anzulegen, anschließend wird Dein individueller Fitnessplan erstellt.</string>
    <string name="sport_mode_note_warning">Bitte berücksichtige immer deine sportliche Verfassung!</string>
    <string name="sport_mode_title_activity">Sport Mode</string>
    <string name="sport_mode_go">Leg los</string>
    <string name="sport_mode_running_state">Laufzustand</string>
    <string name="sport_mode_countdown">Countdown</string>
    <string name="sport_mode_stop_running">Lauf stoppen</string>
    <string name="sport_mode_again">Sport Test nochmal</string>
    <string name="sport_mode_historie_heading_date">Datum</string>
    <string name="sport_mode_historie_heading_value">Ergebnis</string>
    <string name="sport_mode_demo">Tempo ändern</string>

    <!-- Misc -->
    <string name="help_txt">Hier werden ab Release Informationen rund um die Funktionalität \nund die Verwendung von <b>PulseBuddy</b> zur Verfügung gestellt. \n\nWeitere Informationen unter <a ref="http://www.pulsebuddy.de">http://www.pulsebuddy.de</a></string>

    <!-- calorie calculator -->
    <string name="calorie_calculator_note">Wähle dein heutiges Essen aus:</string>
    <string name="calorie_calculator_titel">Kalorienrechner</string>
    <string name="calorie_calculator_appetizer">Vorspeise </string>
    <string name="calorie_calculator_appetizer_value">(100 kcal)</string>
    <string name="calorie_calculator_main_course">Hauptspeise</string>
    <string name="calorie_calculator_main_course_value">(1000 kcal)</string>
    <string name="calorie_calculator_dessert">Nachspeise</string>
    <string name="calorie_calculator_dessert_value">(300 kcal)</string>
    <string name="calorie_calculator_basal_metabolism">Grundumsatz:</string>
    <string name="calorie_calculator_current">Kalorien aktuell:</string>
    <string name="calorie_calculator_basal_metabolism_value">0 kcal</string>
    <string name="calorie_calculator_current_value">0 kcal</string>

    <!-- Swipe menu -->
    <string-array name="menu_array">
        <item>Day Mode</item>
        <item>Sport Mode</item>
        <item>Activity Mode</item>
        <item>Calculation Mode</item>
    </string-array>

    <string name="drawer_open">Wähle im Menü</string>

</resources>