<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingTop="10dp" >

    <ListView
        android:id="@+id/new_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:stackFromBottom="true" />

    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ble_list_empty" />

    <TextView
        android:id="@+id/title_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/ble_scanning"
        android:textSize="15dip" />

    <Button
        android:id="@+id/btn_scan"
        style="@style/ButtonsMenuSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ble_scanagain" />

    <Button
        android:id="@+id/btn_disconnectall"
        style="@style/ButtonsMenuSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ble_disconnectall" />

</LinearLayout>