<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:columnCount="2" >

        <TextView
            android:id="@+id/labelBMILabelValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="0"
            android:text="@string/bmi_label_value"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/labelBMIRecommendation"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_row="1"
            android:text="@string/bmi_label_recommendation"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewBMIValue"
            android:layout_column="1"
            android:layout_gravity="right"
            android:layout_row="0"
            android:text="@string/bmi_textView_value"
            android:textColor="@color/green" />

        <requestFocus />

        <TextView
            android:id="@+id/textViewBMIRecommendation"
            android:layout_column="1"
            android:layout_gravity="bottom"
            android:layout_row="1"
            android:text="@string/bmi_textView_recommendation" />

    </GridLayout>

</RelativeLayout>