<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CalorieCalculatorActivity" >

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/gridLayout1"
        android:background="@android:color/darker_gray" />

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewNote"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:columnCount="3"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewMainCourse"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_row="1"
            android:text="@string/calorie_calculator_main_course"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textViewAppetizer"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_row="1"
            android:text="@string/calorie_calculator_appetizer"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageButton
            android:id="@+id/imageButtonAppetizer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_row="0"
            android:background="@null"
            android:contentDescription="@string/calorie_calculator_appetizer"
            android:src="@drawable/appetizer" />

        <TextView
            android:id="@+id/textView2"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_row="2"
            android:text="@string/calorie_calculator_appetizer_value"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageButton
            android:id="@+id/imageButtonDessert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_row="0"
            android:background="@null"
            android:contentDescription="@string/calorie_calculator_appetizer"
            android:src="@drawable/dessert" />

        <TextView
            android:id="@+id/textViewDessert"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_row="1"
            android:text="@string/calorie_calculator_dessert"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView5"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:layout_row="2"
            android:text="@string/calorie_calculator_dessert_value"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_row="2"
            android:text="@string/calorie_calculator_main_course_value"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageButton
            android:id="@+id/imageButtonMainCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_row="0"
            android:background="@null"
            android:contentDescription="@string/calorie_calculator_appetizer"
            android:src="@drawable/main_course" />
    </GridLayout>

    <TextView
        android:id="@+id/textViewNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/calorie_calculator_note"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view1"
        android:layout_below="@+id/view1"
        android:columnCount="1" >

        <TextView
            android:id="@+id/textView1"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_row="0"
            android:text="@string/calorie_calculator_basal_metabolism"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewBasalMetabolism"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_row="0"
            android:text="@string/calorie_calculator_basal_metabolism_value"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView3"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_row="1"
            android:text="@string/calorie_calculator_current"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewCurrentValue"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_row="1"
            android:text="@string/calorie_calculator_current_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/green" />
    </GridLayout>

</RelativeLayout>