<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:gravity="bottom" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:columnCount="1" >

        <TextView
            android:id="@+id/textViewDateOfBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_row="0"
            android:text="@string/calibration_date_of_birth"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewUserHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_row="1"
            android:text="@string/calibration_user_height"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_row="2"
            android:text="@string/calibration_user_weight"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_row="3"
            android:text="@string/calibration_user_gender"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonDateOfBirthday"
            style="@style/ButtonsMenuSmall"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_row="0"
            android:text="@string/calibration_edit" />

        <Button
            android:id="@+id/buttonUserHeight"
            style="@style/ButtonsMenuSmall"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_row="1"
            android:text="@string/calibration_edit" />

        <Button
            android:id="@+id/buttonUserWeight"
            style="@style/ButtonsMenuSmall"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_row="2"
            android:text="@string/calibration_edit" />

        <Button
            android:id="@+id/buttonUserGender"
            style="@style/ButtonsMenuSmall"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_row="3"
            android:text="@string/calibration_edit" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_row="4"
            android:text="@string/calibration_kind_of_sport_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonUserTrainingType"
            style="@style/ButtonsMenuSmall"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_row="4"
            android:text="@string/calibration_edit" />
    </GridLayout>

    <Button
        android:id="@+id/buttonBmiCalculation"
        style="@style/ButtonsMenuSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="selfDestruct"
        android:text="@string/calibration_save_values" />

</RelativeLayout>