<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top" >

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:columnCount="5" >

        <TextView
            android:id="@+id/textViewDateOfBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="1"
            android:text="@string/calibration_date_of_birth"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <DatePicker
            android:id="@+id/datePickerBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="2"
            android:calendarViewShown="false" />

        <TextView
            android:id="@+id/textViewBodySize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="3"
            android:text="@string/calibration_user_height"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="3"
            android:text="@string/calibration_user_weight"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <NumberPicker
            android:id="@+id/numberPickerUserHeight"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="4" />

        <NumberPicker
            android:id="@+id/numberPickerWeight"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="4" />

        <TextView
            android:id="@+id/textViewGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_row="3"
            android:text="@string/calibration_user_gender"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <NumberPicker
            android:id="@+id/numberPickerUserGender"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_row="4" />
    </GridLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/buttonBmiCalculation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="selfDestruct"
            android:text="@string/calibration_bmi_calculation" />
    </RelativeLayout>

</RelativeLayout>